--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build -t amitverma1722/trial-image:latest
+      run: docker build -t amitverma1722/trial-image:latest .
       #If not in the same directory
       #run: docker build ./api/ -t 
     - name: Push image to docker hub
