--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,24 +1,32 @@
-name: Docker Image CI
+name: Build and Push Docker Image to ACR
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # Trigger the workflow when changes are pushed to the main branch
 
 jobs:
-
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest  # The environment where the workflow will run
+    
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build -t amitverma1722/trial-image:latest .
-      #If not in the same directory
-      #run: docker build ./api/ -t 
-    - name: Push image to docker hub
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Log in to Azure Container Registry
+      uses: azure/docker-login@v1
+      with:
+        login-server: acrforfastapi.azurecr.io
+        username: ${{ secrets.ACR_USERNAME }}  # Azure username or service principal username
+        password: ${{ secrets.ACR_PASSWORD }}  # Azure password or service principal password or ACR Access Key
+
+    - name: Build Docker image
       run: |
-        docker login -u amitverma1722 -p ${{ secrets.DOCKER_HUB_TOKEN }}
-        docker push amitverma1722/trial-image:latest
+        docker build -t acrforfastapi.azurecr.io/trial-image:${{ github.sha }} .
+        # Use the commit SHA as a tag
+
+    - name: Push Docker image to ACR
+      run: |
+        docker push acrforfastapi.azurecr.io/trial-image:${{ github.sha }}
+        # Push the newly built image to Azure Container Registry
+
