--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,11 +22,11 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t acrforfastapi.azurecr.io/trial-image:${{ github.sha }} .
+        docker build -t acrforfastapi.azurecr.io/trial-image:${{ github.sha }} -t acrforfastapi.azurecr.io/trial-image:latest .
         # Use the commit SHA as a tag
 
     - name: Push Docker image to ACR
       run: |
-        docker push acrforfastapi.azurecr.io/trial-image:${{ github.sha }}
+        docker push acrforfastapi.azurecr.io/trial-image:${{ github.sha }} -t acrforfastapi.azurecr.io/trial-image:latest .
         # Push the newly built image to Azure Container Registry
 
